--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "mongodb": "^2.2.9",
-    "mongoose": "^4.6.0"
+    "mongoose": "^4.6.0",
+    "serialport": "^4.0.1",
+    "xbee-api": "^0.4.3"
   }
 }
