--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "Source code for Bloomsburg University Bus Tracking App",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "concurrently 'tsc -w' 'nodemon server.js'",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "typings install",
+    "tsc": "tsc",
+    "tsc:w": "tsc -w",
+    "typings": "typings"
   },
   "repository": {
     "type": "git",
@@ -20,22 +25,40 @@
     "app",
     "application"
   ],
-  "author": "Daniel Pany and Rio Weber",
-  "license": "MIT",
+  "author": "Daniel Pany, Rio Weber",
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://"
+    }
+  ],
   "bugs": {
     "url": "https://github.com/riodw/BloomBus-Server/issues"
   },
   "homepage": "http://148.137.138.107:8080/",
   "dependencies": {
+    "angular2": "^2.0.0-beta.17",
     "body-parser": "^1.15.2",
     "bower": "^1.7.9",
     "connect-mongo": "^1.3.2",
+    "debug": "^2.2.0",
     "ejs": "^2.5.2",
+    "es6-shim": "^0.35.1",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "mongodb": "^2.2.9",
     "mongoose": "^4.6.0",
+    "reflect-metadata": "^0.1.2",
+    "rxjs": "^5.0.0-beta.6",
     "serialport": "^4.0.1",
-    "xbee-api": "^0.4.3"
+    "systemjs": "^0.19.39",
+    "typings": "^1.4.0",
+    "xbee-api": "^0.4.3",
+    "zone.js": "^0.6.25"
+  },
+  "devDependencies": {
+    "concurrently": "^3.1.0",
+    "typescript": "^2.0.3",
+    "typings": "^1.4.0"
   }
 }
