--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "body-parser": "^1.15.2",
     "bower": "^1.7.9",
     "connect-mongo": "^1.3.2",
-    "debug": "^2.2.0",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "firebase": "^3.5.1",
     "mongodb": "^2.2.9",
     "mongoose": "^4.6.0",
-    "serialport": "^4.0.1"
+    "serialport": "^4.0.1",
+    "xbee-api": "^0.4.3"
   }
 }
