--- a/package.json
+++ b/package.json
@@ -21,26 +21,36 @@
     "application"
   ],
   "author": "Daniel Pany, Rio Weber",
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://"
-    }
-  ],
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/riodw/BloomBus-Server/issues"
   },
   "homepage": "http://148.137.138.107:8080/",
   "dependencies": {
     "body-parser": "^1.15.2",
-    "bower": "^1.7.9",
     "connect-mongo": "^1.3.2",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "firebase": "^3.5.1",
+    "history": "^4.4.0",
     "mongodb": "^2.2.9",
     "mongoose": "^4.6.0",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-router": "^3.0.0",
     "serialport": "^4.0.1",
     "xbee-api": "^0.4.3"
+  },
+  "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-react-html-attrs": "^2.0.0",
+    "babel-plugin-transform-class-properties": "^6.18.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "webpack": "^1.13.3"
   }
 }
