--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "history": "^4.4.0",
     "mongodb": "^2.2.9",
     "mongoose": "^4.6.0",
+    "nodemon": "^1.18.4",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router": "^3.0.0",
@@ -51,6 +52,10 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
     "webpack": "^1.13.3"
   }
 }
