--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "compilerOptions": {
-    "lib": ["es6"],
+    "lib": [
+      "es6",
+      "dom",
+      "es2017.object"
+    ],
     "module": "commonjs",
     "noImplicitReturns": true,
     "outDir": "lib",
