Fix triggerStationProximity and configure database rules

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,7 @@ typings/
 
 # Serverless directories
 .serverless
+
+functions/lib/serviceAccountKey.js
+functions/lib/serviceAccountKey.js.map
+functions/src/serviceAccountKey.ts
