--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.ts",
   "dependencies": {
+    "@turf/turf": "^5.1.6",
     "firebase": "^5.5.5",
     "firebase-admin": "^6.0.0",
     "firebase-functions": "^2.0.5"
   },
   "devDependencies": {
-    "eslint": "^5.7.0"
+    "@types/turf": "^3.5.32",
+    "@types/uuid": "^3.4.4",
+    "eslint": "^5.7.0",
+    "typescript": "^3.3.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
