--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
       "es2017.object"
     ],
     "module": "commonjs",
+    "resolveJsonModule": true,
     "noImplicitReturns": true,
     "outDir": "lib",
     "sourceMap": true,
@@ -13,6 +14,6 @@
   },
   "compileOnSave": true,
   "include": [
-    "src"
+    "."
   ]
 }
