--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^3.3.1"
   },
   "scripts": {
+    "start": "ts-node server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
