--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.ts",
   "dependencies": {
     "@turf/turf": "^5.1.6",
+    "express": "^4.17.0",
     "firebase": "^5.5.5",
     "firebase-admin": "^6.0.0",
     "firebase-functions": "^2.0.5"
@@ -12,7 +13,7 @@
   "devDependencies": {
     "@types/turf": "^3.5.32",
     "@types/uuid": "^3.4.4",
-    "eslint": "^5.7.0",
+    "eslint": "^5.16.0",
     "typescript": "^3.3.1"
   },
   "scripts": {
