--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.ts",
   "dependencies": {
+    "@material-ui/core": "^4.0.0-rc.0",
     "@turf/turf": "^5.1.6",
     "express": "^4.17.0",
     "firebase": "^5.5.5",
