--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "@material-ui/core": "^4.0.0-rc.0",
     "@turf/turf": "^5.1.6",
     "express": "^4.17.0",
+    "express-fileupload": "^1.1.4",
     "firebase": "^5.5.5",
     "firebase-admin": "^6.0.0",
-    "firebase-functions": "^2.0.5"
+    "firebase-functions": "^2.0.5",
+    "multer": "^1.4.1"
   },
   "devDependencies": {
+    "@types/express-fileupload": "^1.1.0",
+    "@types/multer": "^1.3.7",
     "@types/turf": "^3.5.32",
     "@types/uuid": "^3.4.4",
     "eslint": "^5.16.0",
