--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^5.5.5",
     "firebase-admin": "^6.0.0",
     "firebase-functions": "^2.0.5",
+    "lodash": "^4.17.11",
     "multer": "^1.4.1"
   },
   "devDependencies": {
