--- a/package.json
+++ b/package.json
@@ -1,38 +1,56 @@
 {
-  "name": "bloombus-server",
+  "name": "bloombus_server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.ts",
-  "dependencies": {
-    "@material-ui/core": "^4.0.0-rc.0",
-    "@turf/turf": "^5.1.6",
-    "express": "^4.17.0",
-    "firebase": "^5.5.5",
-    "firebase-admin": "^6.0.0",
-    "firebase-functions": "^2.0.5",
-    "lodash": "^4.17.11",
-    "multer": "^1.4.1"
-  },
-  "devDependencies": {
-    "@types/express-fileupload": "^1.1.0",
-    "@types/multer": "^1.3.7",
-    "@types/turf": "^3.5.32",
-    "@types/uuid": "^3.4.4",
-    "eslint": "^5.16.0",
-    "typescript": "^3.3.1"
-  },
+  "description": "Source code for Bloomsburg University Bus Tracking App",
+  "main": "server.js",
   "scripts": {
-    "start": "ts-node server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jgibson02/BloomBus-Server.git"
+    "url": "git+https://github.com/riodw/BloomBus-Server.get"
   },
-  "author": "John Gibson",
-  "license": "ISC",
+  "keywords": [
+    "bloomsburg",
+    "university",
+    "bus",
+    "gps",
+    "schedule",
+    "tracking",
+    "app",
+    "application"
+  ],
+  "author": "Daniel Pany, Rio Weber",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jgibson02/BloomBus-Server/issues"
+    "url": "https://github.com/riodw/BloomBus-Server/issues"
   },
-  "homepage": "https://github.com/jgibson02/BloomBus-Server#readme"
+  "homepage": "http://148.137.138.107:8080/",
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "connect-mongo": "^1.3.2",
+    "express": "^4.14.0",
+    "express-session": "^1.14.1",
+    "firebase": "^3.5.1",
+    "history": "^4.4.0",
+    "mongodb": "^2.2.9",
+    "mongoose": "^4.6.0",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-router": "^3.0.0",
+    "serialport": "^4.0.1",
+    "xbee-api": "^0.4.3"
+  },
+  "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-react-html-attrs": "^2.0.0",
+    "babel-plugin-transform-class-properties": "^6.18.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "webpack": "^1.13.3"
+  }
 }
